tests/baselines/reference/breakTarget5.errors.txt
tests/cases/compiler/breakTarget5.ts(1,1): error TS7028: Unused label.
tests/cases/compiler/breakTarget5.ts(5,7): error TS1107: Jump target cannot cross function boundary.


==== tests/cases/compiler/breakTarget5.ts (2 errors) ====
    target:
    ~~~~~~
!!! error TS7028: Unused label.
    while (true) {
      function f() {
        while (true) {
          break target;
          ~~~~~~~~~~~~~
!!! error TS1107: Jump target cannot cross function boundary.
        }
      }
    }